# purescript-packages2nix

./: README.md  purescript-packages2nix.cabal
app/: Main.hs
src/: Lib.hs
