name:                purescript-packages2nix
version:             0.1.0.0
synopsis:            Convert the purescript package set to a nix expression.
description:         Please see README.md
homepage:            https://github.com/ElvishJerricco/purescript-packages2nix#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           2016 Will Fancher
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  exposed-modules:     Lib
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , containers
                     , text
                     , lens
  default-language:    Haskell2010

executable purescript-packages2nix-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , purescript-packages2nix
                     , text
                     , containers
                     , bytestring
                     , aeson
                     , lens
  default-language:    Haskell2010

test-suite purescript-packages2nix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , purescript-packages2nix
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/purescript-packages2nix
